src/Listings.css
.top-header {
    display: grid;
    grid-template-columns: 0.2fr 0.1fr 0.2fr;
    grid-column-gap: 5px;
    align-items: center;
  }

  .inline-div {
    background-color: white;
    border: 1px solid white;
    border-radius: 1em;
  }
  
  .cards {
    padding: 1em;
    margin: 1em;
  }
  
  .cards img {
    width: 11em;
    height: 13em;
    border-radius: 1em;
  }
  
  .cards p {
    font-weight: bold;
  }
  
  .avatar-img {
    width: 1.5em !important;
    height: 1.5em !important;
  }
  
  .text-spn {
    font-size: 12px;
    position: relative;
    bottom: 7px;
    margin-left: 4px;
  }
  
  .card-split {
    display: grid;
    grid-template-columns: 0.3fr 0.3fr 0.3fr 0.3fr
  }

  .active-btn{
    background: #bcb0d8;
  }
  .not-active-btn{
    background: #fff;
    color: #9a9191;
  }

  .connect-wallet-section{
    height: 50vh;
    text-align: center;
    display: flex;
    justify-content: center;
    align-items: center;
  }

